Update users controller | users specs
