# app/controllers/api/v1/users_controller.rb
@@ -36,6 +36,6 @@ class Api::V1::UsersController < ApplicationController
   end
 
   def user_params
-    params.require('user').permit(:username, :email, :password)
+    params.require('user').permit(:username, :email, :password, :role)
   end
 end
